Logistics Done Better Section

--- a/assets/sass/global/_fonts.scss
+++ b/assets/sass/global/_fonts.scss
@@ -7,3 +7,8 @@
     font-weight: 400;
     src: url("../../fonts/Robinson.otf");
 }
+
+@font-face {
+	font-family: "Edo";
+	src: url('../fonts/edo.ttf');
+}
