--- a/assets/sass/sections/_section.scss
+++ b/assets/sass/sections/_section.scss
@@ -341,7 +341,7 @@ main {
 			align-items: center;
 			width: 100%;
 			min-height: max(12vh, 6rem);
-			padding: 2rem 0;
+			padding: 0;
 		}
 		&.text_tilted {
 			padding: 0;
@@ -383,13 +383,15 @@ main {
 		}
 	}
 	article.wrapper {
-		section.wraper_text {
-			position: sticky;
-			top: 0;
-			left: 0;
-			width: 100%;
-			background-color: $color-white;
-			z-index: 20;
+		@media screen and (min-width: 768px){
+			section.wraper_text {
+				position: sticky;
+				top: 0;
+				left: 0;
+				width: 100%;
+				background-color: $color-white;
+				z-index: 20;
+			}
 		}
 	}
 }
