Video Overlay Section

--- a/assets/sass/sections/_section.scss
+++ b/assets/sass/sections/_section.scss
@@ -205,7 +205,7 @@ main {
 				// }
 			}
 		}
-		&#contact-us {
+		&.video_overlay {
 			position: relative;
 			padding: 0;
 			min-height: fit-content;
