Layout & CSS Change

--- a/assets/sass/sections/_section.scss
+++ b/assets/sass/sections/_section.scss
@@ -186,6 +186,7 @@ main {
 		}
 		&#testimonials {
 			min-height: fit-content;
+			padding-top: 0;
 			.testimonial-slider {
 				.swiper-slide {
 					.testimonial-item {
